# mcp-strike

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo_server/: __init__.py  __main__.py  server.py
docs/: PLAN.md
src/mcp_strike/: __init__.py  cli.py
src/mcp_strike/agent/: __init__.py  adaptive.py
src/mcp_strike/attacks/: __init__.py  _helpers.py  base.py  data_exfiltration.py  description_injection.py  overreaching_parameters.py  path_traversal.py  registry.py  response_injection.py
src/mcp_strike/client/: __init__.py  stdio.py
src/mcp_strike/config/: __init__.py  dotenv.py  models.py
src/mcp_strike/demo_server/: __init__.py  __main__.py  server.py
src/mcp_strike/judge/: __init__.py  base.py  null.py  openai_judge.py  pipeline.py
src/mcp_strike/report/: __init__.py  json_report.py  terminal.py
tests/: conftest.py  test_agent_adaptive.py  test_attack_data_exfiltration.py  test_attack_description_injection.py  test_attack_error_paths.py  test_attack_overreaching_parameters.py  test_attack_path_traversal.py  test_attack_registry.py  test_attack_response_injection.py  test_cli.py  test_config.py  test_dotenv.py  test_judge_base.py  test_judge_openai.py  test_judge_pipeline.py  test_report_json.py  test_report_terminal.py  test_smoke.py  test_target_timeout.py  test_vuln_six_static_blindspot.py
