# pyproject.toml for MCP-Strike
#
# Distribution name (PyPI): mcp-strike
# Importable Python package: mcp_strike
# Managed with `uv`. See README for setup commands.

[project]
name = "mcp-strike"
version = "0.1.0"
description = "Active, runtime adversarial testing for MCP servers: point it at your own server and find out what breaks."
readme = "README.md"
requires-python = ">=3.10"
# PEP 639: SPDX license expression + the license file(s) to ship in the
# distribution. Replaces the older `license = { file = "LICENSE" }` table.
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Leo Martinez III" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "security",
    "red-team",
    "llm",
    "adversarial",
    "scanner",
    "vulnerability",
    "pentest",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    # No "License ::" classifier: with a PEP 639 SPDX `license` expression
    # above, the license classifier is redundant (and rejected by modern
    # build backends).
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

# Runtime dependencies. Conservative; no new heavy deps without a clear reason.
dependencies = [
    "mcp>=1.10",      # Official MCP Python SDK (verified on PyPI; maintained by Anthropic).
    "typer>=0.12",    # CLI framework (used in later phases; declared now so the package imports cleanly).
    "rich>=13.7",     # Pretty terminal output.
    "httpx>=0.27",    # HTTP client (for future HTTP-transport MCP support + LLM API calls).
    "pydantic>=2.7",  # Config + data models.
    "openai>=1.40",   # OpenAI Python SDK; used by the LLM-as-judge layer.
]

[project.optional-dependencies]
# Dev tools; installed via `uv sync --extra dev`.
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",  # coverage measurement; run via `uv run pytest --cov`
    "mypy>=1.0",        # type-check; run via `uv run mypy src/mcp_strike`
    "ruff>=0.5",
]

[project.scripts]
# Registers the `mcp-strike` console script. Typer's `app` object is
# callable, so this entry point invokes the CLI when run from the shell.
mcp-strike = "mcp_strike.cli:app"

[project.urls]
Homepage = "https://github.com/LeoMartinezTAMUK/mcp-strike"
Repository = "https://github.com/LeoMartinezTAMUK/mcp-strike"
Issues = "https://github.com/LeoMartinezTAMUK/mcp-strike/issues"
Documentation = "https://github.com/LeoMartinezTAMUK/mcp-strike#readme"

# -----------------------------------------------------------------------------
# Build system
# -----------------------------------------------------------------------------
# Hatchling is the default uv-friendly backend. We use a `src/` layout, so we
# explicitly tell hatch where the package lives.

[build-system]
# hatchling >= 1.27 understands the PEP 639 `license`/`license-files` keys.
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_strike"]

# -----------------------------------------------------------------------------
# Ruff (lint + format)
# -----------------------------------------------------------------------------

[tool.ruff]
# Match the project's minimum supported Python.
target-version = "py310"
line-length = 100
# Lint production code (which now includes mcp_strike.demo_server) and tests.
src = ["src", "tests"]

[tool.ruff.lint]
# A small, opinionated rule set. We can expand later; for now keep it readable.
#   E,W = pycodestyle errors/warnings
#   F   = pyflakes (unused imports etc.)
#   I   = isort (import ordering)
#   UP  = pyupgrade (modern Python idioms)
#   B   = flake8-bugbear (common bug patterns)
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic CLI pattern puts `typer.Option(...)` and
# `typer.Argument(...)` calls in function-argument defaults. Ruff's B008
# ("no function calls in defaults") is meant for ordinary code where this
# would be a shared-mutable-default bug; with typer it isn't (typer copies
# defaults per invocation). The narrow scope keeps the rule active everywhere
# else in the project.
"src/mcp_strike/cli.py" = ["B008"]

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------

[tool.pytest.ini_options]
# Where to look for tests, and how to make mcp_strike importable without
# installing. We no longer need the repo root on pythonpath now that
# `demo_server` lives inside the package (was needed back when
# `demo_server/` at the repo root).
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

# -----------------------------------------------------------------------------
# Coverage (pytest-cov)
# -----------------------------------------------------------------------------
# Default coverage scope = the production source. Tests live under tests/
# and shouldn't count toward "lines covered"; that's a tautology.
# Run with: uv run pytest --cov

[tool.coverage.run]
source = ["src/mcp_strike"]
# The demo server runs as a separate subprocess during the scan, so the
# in-process coverage tool can't see it execute — it would always read as
# 0% and drag the headline number down, even though the CLI/integration
# tests exercise it end to end. Exclude it so the reported percentage
# reflects the code coverage actually measures.
omit = ["src/mcp_strike/demo_server/*"]

[tool.coverage.report]
# Surface the missing-line ranges right in the terminal report so we can
# tell where to add a test.
show_missing = true
skip_covered = false
# Don't fail the build on low coverage yet; the goal here is to surface
# the number, not gate on it. Bump this when we have a defensible floor.
fail_under = 0

# -----------------------------------------------------------------------------
# Mypy (static type-checking)
# -----------------------------------------------------------------------------
# Run with: uv run mypy src/mcp_strike
#
# We start with moderate strictness rather than --strict. The goal at this
# stage is "catch real type errors ruff doesn't, without forcing every edge
# case to be over-annotated." Tighten as the codebase grows.

[tool.mypy]
python_version = "3.10"
# Scope: production code only. Tests can stay loose; they're full of
# fakes and ad-hoc shapes that benefit less from strict typing.
files = ["src/mcp_strike"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
# Check the bodies of un-annotated functions too. Cheap recall boost.
check_untyped_defs = true

# Third-party SDKs whose type stubs aren't guaranteed. ``mcp`` ships
# inline annotations but mypy has been known to have trouble resolving
# them in some configurations; ``openai`` is similar. If we hit real
# issues here we can pin specific overrides; for now, be permissive.
[[tool.mypy.overrides]]
module = ["mcp.*", "openai.*"]
ignore_missing_imports = true
